# orbit-game

./: CMakeLists.txt  libs.cmake  setup.md
.devcontainer/: devcontainer.json
src/: main.cpp
src/component/: game_scene.cpp  game_scene.hpp  render_sdl3_engine.cpp  shuttle.hpp  sound_soloud_engine.cpp  sound_soloud_engine.hpp
src/core/: constants.hpp  file_path.cpp  file_path.hpp  model.hpp  random.hpp  render_engine.cpp  render_engine.hpp  render_scene.cpp  render_scene.hpp  sound_engine.cpp  sound_engine.hpp
src/engine/: render_sdl3_engine.hpp  sound_soloud_engine.cpp  sound_soloud_engine.hpp
src/game/: game_scene.cpp  shuttle.hpp  shuttle_cfg.hpp
